--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,11 @@
 #footer{
     background-color: #121212;
-    height: 200px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-top: 1px solid #363636;
+    color:blanchedalmond;
+    font-size: 1.8em;
+    margin: 0 auto;
 }
