--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -1,10 +1,10 @@
 #login,
 #register {
-    border: 1px solid #363636;
+    border: 10px solid #363636;
     background-color: #000;
-    padding: 1.5em 2em;
-    max-width: 90%;
-    margin: 2em auto;
+    padding: 1.5em 1em;
+    max-width: 100%;
+    margin: 0em auto;
 }
 
 #login h2,
@@ -20,6 +20,13 @@
     color: #999;
     margin-bottom: 1.5em;
     font-size: 3.8em;
+}
+
+.profile-image{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 1em;
 }
 
 #login form,
